<resources>
    <string name="app_name" translatable="false">COVID-19 App</string>
    <string name="deaths" translatable="false">Deaths</string>
    <string name="cases" translatable="false">Cases</string>
    <string name="recovered" translatable="false">Recovered</string>
    <string name="no_connection" translatable="false">No Internet Connection.</string>
    <string name="not_known" translatable="false">Not Known</string>
    <string name="totalcases" translatable="false">Total Cases</string>
    <string name="totaldeaths" translatable="false">Total Deaths</string>
    <string name="casestoday" translatable="false">Cases Today</string>
    <string name="deathstoday" translatable="false">Deaths Today</string>
    <string name="active" translatable="false">Active Cases</string>
    <string name="totalrecovered" translatable="false">Recoveries</string>
    <string name="criticalcases" translatable="false">Critical Cases</string>
    <string name="tests" translatable="false">Total Tests Conducted</string>
    <string name="casespermil" translatable="false">Cases Per One Million</string>
    <string name="deathspermil" translatable="false">Deaths Per One Million</string>
    <string name="testspermil" translatable="false">Tests Per One Million</string>
    <string name="search" translatable="false">Search Countries</string>
    <string-array name="spinner_options">
        <item>Just Now</item>
        <item>Yesterday</item>
        <item>2 Days Ago</item>
    </string-array>
    <string name="not_found" translatable="false">No search results</string>
    <string name="past15days" translatable="false">Trend over last 7 days</string>
    <string name="topcases" translatable="false">Updated</string>
    <string name="news" translatable="false">News</string>
    <string name="global" translatable="false">Global</string>
    <string name="countries" translatable="false">Countries</string>
    <string name="sorted_by" translatable="false">Sort by:</string>
    <string name="welcome_msg" translatable="false">Here are the updates for today</string>
    <string name="worldwide" translatable="false">worldwide</string>
    <string name="quarantined" translatable="false">Quarantined</string>
    <string name="information" translatable="false">Information</string>
    <string name="symptoms" translatable="false">Symptoms</string>
    <string name="about" translatable="false">About</string>
    <string name="prevention" translatable="false">Prevention</string>
    <string name="about_corona" translatable="false">Information on the COVID-19 coronavirus</string>
    <string name="symptoms_info" translatable="false">Signs and symptoms to identify infection</string>
    <string name="prevention_info" translatable="false">Take steps to reduce your risk of infection</string>
    <string name="what_is_covid_19" translatable="false">What is COVID-19?\n</string>
    <string name="about_para1" translatable="false">
        Coronaviruses are a family of viruses that can cause illnesses such as common cold and severe respiratory problems.\n
    </string>
    <string name="about_para2" translatable="false">
        In 2019, a new coronavirus was identified as the cause of a disease outbreak that originated in China.
        The virus is now known as the severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2).
        The disease it causes is called COVID-19.\n\n
        In March 2020, the World Health Organization declared the COVID-19 outbreak a pandemic.\n
    </string>
    <string name="what_are_covid_19_symptoms" translatable="false">What are the most common COVID-19 symptoms?\n</string>
    <string name="symptoms_top_text" translatable="false">
        Signs and symptoms of COVID-19 may appear 2 - 14 days after exposure.
        This time between exposure and symptoms is called the incubation period.\n
        Common signs and symptoms can include:\n</string>
    <string name="symptoms_bottom_text" translatable="false">
        \nThis does not mean that these are the only symptoms possible.
        Other less common symptoms have been reported, such as rash, nausea, vomiting and diarrhea.
        \nThe severity of COVID-19 symptoms can range from very mild to severe.
        Some people may have only a few symptoms, and some people may have no symptoms at all.\n
    </string>
    <string name="how_can_you_prevent" translatable="false">How can you prevent yourself from the risk of infection?</string>
    <string name="prevention_top_text" translatable="false">
        Some countries have recieved their supplies of the Pfizer/BioNTech or Moderna COVID-19 vaccines.
        However, to avoid getting COVID-19 in the first place, you can take additional steps to reduce your risk of infection.\n
        WHO recommends the following precautions for avoiding exposure to COVID-19:\n"
    </string>
    <string name="safe_distance" translatable="false">
        Keep distance between yourself and others, at least 2 meters (6 feet).
        Some people may have COVID-19 and spread it to others, even if they don\'t have symptoms or don\'t know they have it.\n
    </string>
    <string name="maintain_a_safe_distance" translatable="false">Maintain a safe distance</string>
    <string name="wash_your_hands" translatable="false">Wash your hands</string>
    <string name="wash_hands" translatable="false">
        Wash your hands often with soap and water for at least 20 seconds, or use an alcohol-based hand sanitizer that contains at least 60% alcohol.\n
    </string>
    <string name="wear_a_mask" translatable="false">Wear a mask</string>
    <string name="wear_mask" translatable="false">
        To minimize virus spread through air, cover your face with a cloth or surgical face mask in public spaces, where it\'s difficult to avoid close contact with others.\n
    </string>
    <string name="dont_touch_face" translatable="false">Don\'t touch your face</string>
    <string name="use_tissue" translatable="false">
        Avoid touching your eyes, nose and mouth.
        You may use gloves or tissues instead.
        Used tissues and gloves must be thrown away immediately after use.\n
    </string>
    <string name="stay_home_stay_safe" translatable="false">Stay home, stay safe</string>
    <string name="stay_home" translatable="false">
        Stay home from work, school and public areas if you\'re sick, unless you\'re going to get medical care.
        Avoid public transportation, taxis and ride-sharing if you\'re sick.
    </string>
    <string name="fever" translatable="false">Fever</string>
    <string name="cough" translatable="false">Cough</string>
    <string name="loss_of_breath" translatable="false">Loss of breath</string>
    <string name="sore_throat" translatable="false">Sore Throat</string>
    <string name="dizziness" translatable="false">Dizziness</string>
    <string-array name="news_spinner_options">
        <item>USA</item>
        <item>India</item>
        <item>Australia</item>
        <item>Russia</item>
        <item>France</item>
        <item>UK</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>